# ar-io-proof

./: .gitignore  CHANGELOG.md  CLAUDE.md  README.md  pyproject.toml
.github/workflows/: ci.yml  release-ts.yml  release.yml
cross-kernel/: .gitignore  PIN  README.md  generate_cases.py  generate_export_cases.py  run.sh  run_export.sh  ts_export_leg.mjs  ts_leg.mjs
cross-kernel/go-verifier/: go.mod  go.sum  main.go
cross-kernel/vendor-agent/: go.mod
specs/: architecture.md  envelope-spec.md  evidence-bundle.md  evidence-export.md  governance.md
src/ario_proof/: __init__.py  bundle.py  canonicalize.py  envelope.py  evidence.py  hash.py  merkle.py  rsa_pss.py  sign.py  verify.py
test-vectors/: CORPUS-v1.md  README.md  VENDORING.md  envelope-asset-missing-01.json  envelope-asset-registered-01.json  envelope-key-retired-01.json  envelope-policy-changed-01.json  envelope-tamper-detected-01.json  envelope-verification-checkpoint-01.json  merkle-tree-00-leaves.json  merkle-tree-01-leaves.json  merkle-tree-02-leaves.json  merkle-tree-03-leaves.json  merkle-tree-07-leaves.json  merkle-tree-1024-leaves.json  merkle-tree-16-leaves.json
tests/: test_attestation_exponent_forgery.py  test_bundle.py  test_canonicalization_depth.py  test_canonicalize.py  test_conformance.py  test_envelope.py  test_evidence.py  test_evidence_export.py  test_hash.py  test_merkle.py  test_rsa_pss.py  test_sign_verify.py
tools/gen-vectors/: LICENSE  README.md  (+4 more)
ts/: CHANGELOG.md  LICENSE  README.md  package-lock.json  package.json  tsconfig.build.json  tsconfig.json  vitest.config.ts
(+59 files in other folders)
